# bot-society-markets

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  deploy-render.bat  deploy-render.ps1  docker-compose.yml  install-shortcuts.ps1  launch-dashboard.bat  launch-dashboard.ps1  pyproject.toml  render.yaml  run-cycle.ps1  run-dev.ps1  run-docker.bat  run-docker.ps1  run-worker.ps1  stop-docker.ps1  wrangler.jsonc
alembic/: env.py
api/: README.md  __init__.py  requirements.txt
deploy/: verify-production.ps1
docs/: 00-founder-memo.md  01-product-requirements-document.md  02-pitch-deck-outline.md  03-technical-architecture.md  04-financial-model.md  05-execution-roadmap.md  06-investor-memo.md  07-landing-page-copy.md  08-app-wireframes.md  09-founder-deck-script.md  10-scoring-specification.md  11-data-provider-decision-memo.md  12-deployment-guide.md  13-open-source-stack-watchlist.md  14-polymarket-open-source-integration-memo.md  15-prediction-market-backtesting-adapter.md  16-paper-trading-venue-plan.md  17-custom-domain-dashboard-launch.md  18-akash-hosting-guide.md  19-production-cutover-playbook.md  20-commercial-expansion-program.md  21-payments-onboarding-architecture.md  22-connectors-dashboard-desktop-program.md  23-legal-and-compliance-readiness.md  24-bitprivat-business-model-strategy.md  25-bitprivat-v1-technical-architecture.md  26-bitprivat-v1-migration-roadmap.md  28-akash-cli-wallet-deploy.md  29-interactive-brokers-connector.md  30-professional-trading-ui-spec.md  31-social-trader-youtube-engine.md  (+7 more)
prototype/: README.md  (+3 more)
(+81 files in other folders)
